fix center alignmnets for product card in hover state

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1198,6 +1198,9 @@ ol {
 	width: 100%;
 	bottom: 30px;
 	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .product__hover li {
